@@ -18,8 +18,8 @@
 phpAds_registerGlobal ('codetype', 'what', 'acid', 'source', 'target', 'withText', 'template', 'refresh',
 					   'uniqueid', 'width', 'height', 'website', 'ilayer', 'popunder', 'left', 'top', 'timeout',
 					   'transparent', 'resize', 'block', 'raw', 'hostlanguage', 'submitbutton', 'generate',
-					   'layerstyle', 'delay', 'delay_type', 'blockcampaign');
-
+					   'layerstyle', 'delay', 'delay_type', 'blockcampaign', 'toolbars', 'location', 'menubar',
+					   'status', 'resizable', 'scrollbars');
 
 // Load translations
 if (file_exists("../language/".strtolower($phpAds_config['language'])."/invocation.lang.php"))
@@ -41,8 +41,8 @@ function phpAds_GenerateInvocationCode()
 	global $width, $height, $website, $ilayer;
 	global $popunder, $left, $top, $timeout, $delay, $delay_type;
 	global $transparent, $resize, $block, $blockcampaign, $raw;
-	global $hostlanguage;
-	
+	global $hostlanguage, $toolbars, $location, $menubar, $status;
+	global $resizable, $scrollbars;
 	
 	// Check if affiliate is on the same server
 	if (isset($website) && $website != '')
@@ -286,6 +286,24 @@ function phpAds_GenerateInvocationCode()
 		if (isset($timeout) && $timeout != '' && $timeout != '-')
 			$parameters['timeout'] = "timeout=".$timeout;
 		
+		if (isset($toolbars) && $toolbars == '1')
+			$parameters['toolbars'] = "toolbars=1";
+		
+		if (isset($location) && $location == '1')
+			$parameters['location'] = "location=1";
+		
+		if (isset($menubar) && $menubar == '1')
+			$parameters['menubar'] = "menubar=1";
+		
+		if (isset($status) && $status == '1')
+			$parameters['status'] = "status=1";
+		
+		if (isset($resizable) && $resizable == '1')
+			$parameters['resizable'] = "resizable=1";
+		
+		if (isset($scrollbars) && $scrollbars == '1')
+			$parameters['scrollbars'] = "scrollbars=1";
+		
 		if (isset($delay_type))
 		{
 			if ($delay_type == 'seconds' && isset($delay) && $delay != '' && $delay != '-')
@@ -395,8 +413,8 @@ function phpAds_placeInvocationForm($extra = '', $zone_invocation = false)
 	global $width, $height, $ilayer;
 	global $popunder, $left, $top, $timeout, $delay, $delay_type;
 	global $transparent, $resize, $block, $blockcampaign, $raw;
-	global $hostlanguage;
-	global $layerstyle;
+	global $hostlanguage, $toolbars, $location, $menubar, $status;
+	global $layerstyle, $resizable, $scrollbars;
 	global $tabindex;
 	
 	
@@ -555,7 +573,7 @@ function phpAds_placeInvocationForm($extra = '', $zone_invocation = false)
 			$show = array ('what' => true, 'acid' => true, 'target' => true, 'source' => true, 'withText' => true, 'size' => true, 'resize' => true, 'transparent' => true);
 		
 		if ($codetype == 'popup')
-			$show = array ('what' => true, 'acid' => true, 'target' => true, 'source' => true, 'absolute' => true, 'popunder' => true, 'timeout' => true, 'delay' => true);
+			$show = array ('what' => true, 'acid' => true, 'target' => true, 'source' => true, 'absolute' => true, 'popunder' => true, 'timeout' => true, 'delay' => true, 'windowoptions' => true);
 		
 		if ($codetype == 'adlayer')
 			$show = phpAds_getLayerShowVar();
@@ -845,6 +863,54 @@ function phpAds_placeInvocationForm($extra = '', $zone_invocation = false)
 			echo "<td width='200'>".$GLOBALS['strAutoCloseAfter']."</td><td width='370'>";
 				echo "<input class='flat' type='text' name='timeout' size='' value='".(isset($timeout) ? $timeout : '-')."' style='width:50px;' tabindex='".($tabindex++)."'> ".$GLOBALS['strAbbrSeconds']."</td></tr>";
 			echo "<tr><td width='30'><img src='images/spacer.gif' height='1' width='100%'></td>";
+		}
+		
+		// Window options
+		if (isset($show['windowoptions']) && $show['windowoptions'] == true)
+		{
+			echo "<td colspan='2'><img src='images/break-l.gif' height='1' width='200' vspace='6'></td></tr>";
+			echo "<tr><td width='30'>&nbsp;</td><td width='200' valign='top'>".$GLOBALS['strWindowOptions']."</td><td width='370'>";
+			
+			echo "<table cellpadding='0' cellspacing='0' border='0'>";
+			
+			echo "<tr><td>".$GLOBALS['strShowToolbars']."</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='toolbars' value='1'".(isset($toolbars) && $toolbars != 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strYes']."<br>";
+			echo "</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='toolbars' value='0'".(!isset($toolbars) || $toolbars == 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strNo']."";
+			echo "</td></tr><tr><td colspan='5'><img src='images/break-l.gif' height='1' width='200' vspace='2'></td></tr>";
+			
+			echo "<tr><td>".$GLOBALS['strShowLocation']."</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='location' value='1'".(isset($location) && $location != 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strYes']."<br>";
+			echo "</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='location' value='0'".(!isset($location) || $location == 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strNo']."";
+			echo "</td></tr><tr><td colspan='5'><img src='images/break-l.gif' height='1' width='200' vspace='2'></td></tr>";
+			
+			echo "<tr><td>".$GLOBALS['strShowMenubar']."</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='menubar' value='1'".(isset($menubar) && $menubar != 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strYes']."<br>";
+			echo "</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='menubar' value='0'".(!isset($menubar) || $menubar == 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strNo']."";
+			echo "</td></tr><tr><td colspan='5'><img src='images/break-l.gif' height='1' width='200' vspace='2'></td></tr>";
+			
+			echo "<tr><td>".$GLOBALS['strShowStatus']."</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='status' value='1'".(isset($status) && $status != 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strYes']."<br>";
+			echo "</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='status' value='0'".(!isset($status) || $status == 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strNo']."";
+			echo "</td></tr><tr><td colspan='5'><img src='images/break-l.gif' height='1' width='200' vspace='2'></td></tr>";
+			
+			echo "<tr><td>".$GLOBALS['strWindowResizable']."</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='resizable' value='1'".(isset($resizable) && $resizable != 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strYes']."<br>";
+			echo "</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='resizable' value='0'".(!isset($resizable) || $resizable == 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strNo']."";
+			echo "</td></tr><tr><td colspan='5'><img src='images/break-l.gif' height='1' width='200' vspace='2'></td></tr>";
+			
+			echo "<tr><td>".$GLOBALS['strShowScrollbars']."</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='scrollbars' value='1'".(isset($scrollbars) && $scrollbars != 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strYes']."<br>";
+			echo "</td><td>&nbsp;&nbsp;&nbsp;</td><td>";
+			echo "<input type='radio' name='scrollbars' value='0'".(!isset($scrollbars) || $scrollbars == 0 ? ' checked' : '')." tabindex='".($tabindex++)."'>&nbsp;".$GLOBALS['strNo']."";
+			echo "</td></tr>";
+			
+			echo "</table>";
+			echo "</td></tr><tr><td width='30'><img src='images/spacer.gif' height='1' width='100%'></td>";
 		}
 		
 		
